# rust-html-types

./: Cargo.toml  README.md
examples/: flow.rs  semantic.rs  simple.rs
src/: attributes.rs  css.rs  helpers.rs  javascript.rs  lib.rs  node.rs  render.rs  tag.rs  text.rs  url.rs
src/attributes/: value.rs
src/semantic/: behaviourless.rs  body.rs  class.rs  document.rs  flow.rs  h1.rs  head.rs  html.rs  id.rs  macros.rs  main.rs  mod.rs  phrasing.rs  script.rs  stylesheet.rs  to_element.rs
